--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "node-sass": "^4.14.1",
     "nuxt": "^2.0.0",
     "nuxt-socket-io": "^1.0.25",
+    "popper.js": "^1.16.1",
     "sass-loader": "^8.0.2",
     "socket.io": "^2.3.0",
     "vue-countup-v2": "^4.0.0",
-    "vue-sweetalert2": "^3.0.5"
+    "vue-sweetalert2": "^3.0.5",
+    "vue-trend-chart": "^0.15.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
