--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "countup.js": "^2.0.5",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "firebase-admin": "^8.12.1",
     "mongoose": "^5.9.15",
     "node-sass": "^4.14.1",
     "nuxt": "^2.0.0",
